@@ -7,7 +7,6 @@ indexserver =
 [testenv]
 commands=py.test --junitxml={envlogdir}/junit-{envname}.xml []
 deps=pytest
-     py
 
 [testenv:py27-xdist]
 commands=py.test -n5 --junitxml={envlogdir}/junit-{envname}.xml []
